--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "axios": "^1.2.6",
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
     "register-service-worker": "^1.7.2",
